View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026799 | Community | OCCT:Documentation | public | 2015-10-22 10:38 | 2016-04-20 15:51 |
Reporter | Vico Liang | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026799: NCollection_Array2's RowLength and ColLength return wrong value. | ||||
Description | Please see the implementation of these two methods RowLength and ColLength: The RowLength() returns the column length value while ColLength() returns the row length value. Please swap these two method implementation codes to fix the isue. //! RowLength Standard_Integer RowLength (void) const { return (myUpperCol-myLowerCol+1); } //! ColLength Standard_Integer ColLength (void) const { return (myUpperRow-myLowerRow+1); } | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Hello Vico, I guess you may be confused by names of these methods: "RowLength" means length of the row (nb. of columns), and not nb. of rows, as you probably expect. Consider array of 2 rows, 3 columns: Array1 (1, 2, 1, 3); 11 12 13 21 22 23 Here RowLength() should return 3, and ColLength() should be 2. |
|
Branch CR26799 has been created by abv. SHA-1: 7a27a25ebd8846694f56a6e6e624e87c453851ba Detailed log of new commits: Author: abv Date: Sat Oct 24 08:00:58 2015 +0300 0026799: NCollection_Array2's RowLength and ColLength return wrong value. Comments to methods RowLength() and ColLength() improved to avoid possible misinterpretation |
|
I have improved comments to these methods to avoid such kind of confusion, please review |
|
Dear abv, Right that i'm confused. The improved comments is clear for these two methods. Thanks for the improvement. |
|
Please integrate, no testing is needed |
|
Branch CR26799 has been deleted by kgv. SHA-1: 7a27a25ebd8846694f56a6e6e624e87c453851ba |
occt: master 9535c4be 2015-10-24 05:00:58
Committer: bugmaster Details Diff |
0026799: NCollection_Array2's RowLength and ColLength return wrong value. Comments to methods RowLength() and ColLength() improved to avoid possible misinterpretation |
Affected Issues 0026799 |
|
mod - src/NCollection/NCollection_Array2.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-10-22 10:38 | Vico Liang | New Issue | |
2015-10-22 10:38 | Vico Liang | Assigned To | => abv |
2015-10-23 22:29 |
|
Note Added: 0047409 | |
2015-10-24 08:01 | git | Note Added: 0047411 | |
2015-10-24 08:02 |
|
Note Added: 0047412 | |
2015-10-24 08:02 |
|
Assigned To | abv => Vico Liang |
2015-10-24 08:02 |
|
Status | new => resolved |
2015-10-24 08:02 |
|
Steps to Reproduce Updated | |
2015-10-24 15:22 | Vico Liang | Note Added: 0047418 | |
2015-10-24 15:26 | Vico Liang | Assigned To | Vico Liang => abv |
2015-10-24 16:54 |
|
Note Added: 0047420 | |
2015-10-24 16:54 |
|
Assigned To | abv => bugmaster |
2015-10-24 16:54 |
|
Status | resolved => reviewed |
2015-10-24 18:26 |
|
Category | OCCT:Foundation Classes => OCCT:Documentation |
2015-10-26 12:12 |
|
Test case number | => Not needed |
2015-10-26 12:12 |
|
Status | reviewed => tested |
2015-10-30 16:00 | bugmaster | Changeset attached | => occt master 9535c4be |
2015-10-30 16:00 | bugmaster | Status | tested => verified |
2015-10-30 16:00 | bugmaster | Resolution | open => fixed |
2016-04-17 14:35 | git | Note Added: 0053203 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |