0026799: NCollection_Array2's RowLength and ColLength return wrong value.

Comments to methods RowLength() and ColLength() improved to avoid possible misinterpretation